gitlab: Add RZ/G2L CI support
Signed-off-by: Gareth Williams <gareth.williams.jx@renesas.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,3 +25,7 @@
 hihope-rzg2m_shopping-basket:
   image: gitlab.renesas.solutions:5050/spl2/continuous-integration/dockerfiles:ubuntu-16.04-latest
   extends: .app-build
+
+smarc-rzg2l_shopping-basket:
+  image: gitlab.renesas.solutions:5050/spl2/continuous-integration/dockerfiles:ubuntu-20.04-latest
+  extends: .app-build
