Rename demo binary to shoppingbasket_demo_app
Signed-off-by: Chris Paterson <chris.paterson2@renesas.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@
 Makefile
 moc_*.cpp
 ui_mainwindow.h
-supermarket_demo_app
-supermarket_demo_app.pro.user
+shoppingbasket_demo_app
+shoppingbasket_demo_app.pro.user
