--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@
     when: always
     expire_in: 1 month
     paths:
-      - supermarket_demo_app
+      - shoppingbasket_demo_app
 
 hihope-rzg2m_shopping-basket:
   image: gitlab.renesas.solutions:5050/spl2/continuous-integration/dockerfiles:ubuntu-16.04-latest
