gitlab-ci: Add RZ/G2E support
Signed-off-by: Gareth Williams <gareth.williams.jx@renesas.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,10 @@ hihope-rzg2m_shopping-basket:
   image: gitlab.renesas.solutions:5050/spl2/continuous-integration/dockerfiles:ubuntu-18.04-latest
   extends: .app-build
 
+ek874_shopping-basket:
+  image: gitlab.renesas.solutions:5050/spl2/continuous-integration/dockerfiles:ubuntu-18.04-latest
+  extends: .app-build
+
 smarc-rzg2l_shopping-basket:
   image: gitlab.renesas.solutions:5050/spl2/continuous-integration/dockerfiles:ubuntu-20.04-latest
   extends: .app-build
